--- a/Web/about.html
+++ b/Web/about.html
@@ -25,7 +25,7 @@
                             <a class="nav-link not-active" href="index.html" >Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active" href="#">How it works</a>
+                            <a class="nav-link active" href="#">About us</a>
                         </li>   
                     </ul>
                 </div>
