--- a/Web/index.html
+++ b/Web/index.html
@@ -25,7 +25,7 @@
                             <a class="nav-link active" href="#" >Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link not-active" href="works.html">How it works</a>
+                            <a class="nav-link not-active" href="about.html">About us</a>
                         </li>   
                     </ul>
                 </div>
