--- a/Web/about.html
+++ b/Web/about.html
@@ -32,15 +32,48 @@
             </div>
         </nav>
 
+        <!-- Header -->
+        <section class="about-us-header">
+            <div class="container">
+                <h1>Lorem ipsum dolor sit.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et urna quis sapien mollis consequat vitae eu odio. Sed ac dolor congue, dignissim quam ac, efficitur diam. </p>
+            </div>
+        </section>
+
+        <!-- Profile images -->
+        <section class="about-us-description">
+            <div class="container">
+                <div id="person-container">
+                    <img src="https://images.unsplash.com/photo-1521227889351-bf6f5b2e4e37?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1225&q=80">
+                    <h5>Addison Causey</h5>
+                </div>
+                <div id="person-container">
+                    <img src="https://images.unsplash.com/photo-1521227889351-bf6f5b2e4e37?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1225&q=80">
+                    <h5>Fidel Henriquez</h5>
+                </div>
+                <div id="person-container">
+                    <img src="https://images.unsplash.com/photo-1521227889351-bf6f5b2e4e37?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1225&q=80">
+                    <h5>Matthew Keiler</h5>
+                </div>
+                <div id="person-container">
+                    <img src="https://images.unsplash.com/photo-1521227889351-bf6f5b2e4e37?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1225&q=80">
+                    <h5>Daman Sehra</h5>
+                </div>
+            </div>
+        </section>
+
 
         <!-- Footer -->
-        <footer class="page-footer font-small">
+        <footer id="footer" class="page-footer font-small">
             <div class="footer-copyright text-center py-3">© 2020 Copyright:
             <a href="#"> Salary for you</a>
             </div>
         </footer>
 
         <!-- Javascript -->
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         <script src="index.js"></script>
     </body>
 </html>
