Added charts, images, dynamic data

--- a/Web/about.html
+++ b/Web/about.html
@@ -18,7 +18,7 @@
         <!-- Navigation bar -->
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container">
-                <a class="navbar-brand brand-title brand-styling">$alary for you</a>
+                <a class="navbar-brand brand-title brand-styling" href="index.html">$alary for you</a>
                 <div class="navbar-collapse collapse" id="navbar9">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
@@ -35,8 +35,8 @@
         <!-- Header -->
         <section class="about-us-header">
             <div class="container">
-                <h1>Lorem ipsum dolor sit.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et urna quis sapien mollis consequat vitae eu odio. Sed ac dolor congue, dignissim quam ac, efficitur diam. </p>
+                <h1>We get it. Finding a path is hard!</h1>
+                <p>2020 has been a tough year for everyone. As new students start finding their career path at an uncertain time, we believe we can make a fun product to help.</p>
             </div>
         </section>
 
@@ -44,19 +44,19 @@
         <section class="about-us-description">
             <div class="container">
                 <div id="person-container">
-                    <img src="https://images.unsplash.com/photo-1521227889351-bf6f5b2e4e37?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1225&q=80">
+                    <img src="images/addison.JPG">
                     <h5>Addison Causey</h5>
                 </div>
                 <div id="person-container">
-                    <img src="https://images.unsplash.com/photo-1521227889351-bf6f5b2e4e37?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1225&q=80">
+                    <img src="images/fidel.jpeg">
                     <h5>Fidel Henriquez</h5>
                 </div>
                 <div id="person-container">
-                    <img src="https://images.unsplash.com/photo-1521227889351-bf6f5b2e4e37?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1225&q=80">
+                    <img src="images/matthew.jpg">
                     <h5>Matthew Keiler</h5>
                 </div>
                 <div id="person-container">
-                    <img src="https://images.unsplash.com/photo-1521227889351-bf6f5b2e4e37?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1225&q=80">
+                    <img src="images/daman.jpg">
                     <h5>Daman Sehra</h5>
                 </div>
             </div>
@@ -66,7 +66,7 @@
         <!-- Footer -->
         <footer id="footer" class="page-footer font-small">
             <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#"> Salary for you</a>
+            <a href="index.html"> Salary for you</a>
             </div>
         </footer>
 
