--- a/Web/index.html
+++ b/Web/index.html
@@ -18,7 +18,7 @@
         <!-- Navigation bar -->
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container">
-                <a class="navbar-brand brand-title brand-styling">$alary for you</a>
+                <a class="navbar-brand brand-title brand-styling" href="index.html">$alary for you</a>
                 <div class="navbar-collapse collapse" id="navbar9">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
@@ -39,30 +39,22 @@
                     <form action="#">
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="email@example.com">    
+                            <input type="email" class="form-control" id="email" placeholder="email@example.com" required>    
                         </div>
-                        <div class="form-group">
-                            <label for="degree">Degree type</label>
-                            <select class="form-control" id="degree">
-                              <option>Bachelor's</option>
-                              <option>No degree</option>
-                              <option>Associate</option>
-                              <option>Doctorate</option>
-                            </select>
-                          </div>
                           <div class="form-group">
-                            <input type="range" min="25000" step="5000" max="500000" value="100000" class="slider" id="salaryRange">
+                            <label for="salaryRange">Desired salary</label>
+                            <input type="range" min="20000" step="1000" max="210000" value="210000" class="slider" id="salaryRange">
                           </div>
                           <div id="flex-container">
                               <h2>$</h2>
-                              <h2 id="salaryValue">100,000</h2>
+                              <h2 id="salaryValue">210,000</h2>
                           </div>
                           <button type="submit" class="btn" id="submit-btn">Calculate</button>
                     </form>
                 </div>
                 <div class="landing-info">
-                    <h1>Lorem ipsum dolor sit.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et urna quis sapien mollis consequat vitae eu odio. Sed ac dolor congue, dignissim quam ac, efficitur diam. </p>
+                    <h1>Find your money path.</h1>
+                    <p>Looking to change your career based on salary and education? $alary for you uses occupation statistics from the U.S Bureau of Labor Statistics to show good-paying careers and their place in the job market.</p>
                 </div>
             </div>
         </section>
@@ -79,41 +71,37 @@
                     </li>
                   </ul>
                   <div class="tab-content" id="pills-tabContent">
+
                     <!-- Occupation tab -->
                     <div class="tab-pane fade show active" id="pills-occupation" role="tabpanel" aria-labelledby="pills-occupation-tab">
                         <div id="flex-container">
                             <h1>1.</h1>
                             <div id="one-occupation-description">
-                                <h1>Anesthesiologist</h1>
+                                <a href="https://www.onetonline.org/link/summary/29-1211.00" title="Learn more" target="_blank"><h1>Anesthesiologists</h1></a>
                                 <div id="information-format">
                                     <h5>Salary: </h5>
                                     <h5 id="information-format-description">$208,000</h5>
                                 </div>
                                 <div id="information-format">
                                     <h5>Degree type: </h5>
-                                    <h5 id="information-format-description">Doctorate degree</h5>
+                                    <h5 id="information-format-description">Doctoral or professional degree</h5>
                                 </div>
                                 <div id="information-format">
-                                    <h5>Job openings in 2019: </h5>
-                                    <h5 id="information-format-description">+33,000</h5>
+                                    <h5>Projected job openings in 2019: </h5>
+                                    <h5 id="information-format-description">33,800</h5>
                                 </div>
                                 <div id="information-format">
-                                    <h5>Job openings in 2029: </h5>
-                                    <h5 id="information-format-description">+34,000</h5>
+                                    <h5>Projected job openings in 2029: </h5>
+                                    <h5 id="information-format-description">34,000</h5>
+                                </div>
+                                <div id="information-format">
+                                    <h5>Job market based on openings: </h5>
+                                    <h5 id="information-format-description">+201</h5>
                                 </div>
                             </div>
                         </div>
-                        <div id="flex-container" class="information-top-padding">
-                            <h3>2.</h3>
-                            <h3 class="lower-num-padding">Orthodontist:</h3>
-                            <h3 id="information-format-description">$200,000</h3>
-                        </div>
-                        <div id="flex-container" class="information-top-padding">
-                            <h3>3.</h3>
-                            <h3 class="lower-num-padding">C.E.O:</h3>
-                            <h3 id="information-format-description">$180,000</h3>
-                        </div>
                     </div>
+
                     <!-- How rich are you? tab -->
                     <div class="tab-pane fade" id="pills-rich" role="tabpanel" aria-labelledby="pills-rich-tab">
                         <div id="flex-container">
@@ -121,16 +109,16 @@
                             <div id="one-occupation-description">
                                 <h1>Jeff Bezos</h1>
                                 <div id="information-format">
-                                    <h5>Title: </h5>
-                                    <h5 id="information-format-description">C.E.O @ Amazon</h5>
+                                    <h5>Source: </h5>
+                                    <h5 id="information-format-description">Amazon</h5>
                                 </div>
                                 <div id="information-format">
                                     <h5>Net worth: </h5>
                                     <h5 id="information-format-description">$181.5 B</h5>
                                 </div>
                                 <div id="information-format">
-                                    <h5>Field of study in college: </h5>
-                                    <h5 id="information-format-description">Computer Science & Electrical Engineering</h5>
+                                    <h5>Industry: </h5>
+                                    <h5 id="information-format-description">Technology</h5>
                                 </div>
                                 <div id="information-format">
                                     <h5>How long to reach net worth: </h5>
@@ -143,16 +131,16 @@
                             <div id="one-occupation-description">
                                 <h1>Elon Musk</h1>
                                 <div id="information-format">
-                                    <h5>Title: </h5>
-                                    <h5 id="information-format-description">C.E.O @ Space X</h5>
+                                    <h5>Source: </h5>
+                                    <h5 id="information-format-description">Tesla, SpaceX</h5>
                                 </div>
                                 <div id="information-format">
                                     <h5>Net worth: </h5>
                                     <h5 id="information-format-description">$135.8 B</h5>
                                 </div>
                                 <div id="information-format">
-                                    <h5>Field of study in college: </h5>
-                                    <h5 id="information-format-description">Business & Physics</h5>
+                                    <h5>Industry: </h5>
+                                    <h5 id="information-format-description">Automotive</h5>
                                 </div>
                                 <div id="information-format">
                                     <h5>How long to reach net worth: </h5>
@@ -165,16 +153,16 @@
                             <div id="one-occupation-description">
                                 <h1>Mark Zuckerburg</h1>
                                 <div id="information-format">
-                                    <h5>Title: </h5>
-                                    <h5 id="information-format-description">C.E.O @ Facebook</h5>
+                                    <h5>Source: </h5>
+                                    <h5 id="information-format-description">Facebook</h5>
                                 </div>
                                 <div id="information-format">
                                     <h5>Net worth: </h5>
                                     <h5 id="information-format-description">$102.1 B</h5>
                                 </div>
                                 <div id="information-format">
-                                    <h5>Field of study in college: </h5>
-                                    <h5 id="information-format-description">Computer Science & Psychology</h5>
+                                    <h5>Industry: </h5>
+                                    <h5 id="information-format-description">Technology</h5>
                                 </div>
                                 <div id="information-format">
                                     <h5>How long to reach net worth: </h5>
@@ -187,17 +175,25 @@
             </div>
         </section>
 
+        <!-- Chart section -->
+        <section id="dataCharts">
+            <div id="occupationChartContainer">
+                <canvas id="occupationChart" width="800" height="400"></canvas>
+            </div>
+        </section>
         <!-- Footer -->
         <footer id="footer" class="page-footer font-small">
             <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#"> Salary for you</a>
+            <a href="index.html"> Salary for you</a>
             </div>
         </footer>
 
         <!-- Javascript -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://pagecdn.io/lib/chart/2.9.3/Chart.min.js" integrity="sha384-i+dHPTzZw7YVZOx9lbH5l6lP74sLRtMtwN2XjVqjf3uAGAREAF4LMIUDTWEVs4LI" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+        <script src="data/output.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
