Updating charts and data filtering added

--- a/Web/index.html
+++ b/Web/index.html
@@ -180,6 +180,9 @@
             <div id="occupationChartContainer">
                 <canvas id="occupationChart" width="800" height="400"></canvas>
             </div>
+            <div id="richChartContainer">
+                <canvas id="richChart" width="800" height="400"></canvas>
+            </div>
         </section>
         <!-- Footer -->
         <footer id="footer" class="page-footer font-small">
